# fuck-you-money

./: .gitignore  Package.swift  README.md  crypto-tracker.py  crypto_data_default.json  crypto_data_mom.json  pyproject.toml  requirements.txt  users.json
CryptoTrackerApp/: ADD_PACKAGE.md  AppState.swift  ContentView.swift  CryptoTrackerAppApp.swift  Info.plist  KeychainService.swift  LocalAPIServer.swift  project.yml
CryptoTrackerApp/CryptoTrackerApp.xcodeproj/: project.pbxproj
FuckYouMoneyApp/: ADD_PACKAGE.md  AppState.swift  ContentView.swift  FuckYouMoneyAppApp.swift  Info.plist  KeychainService.swift  LocalAPIServer.swift  project.yml
FuckYouMoneyApp/FuckYouMoneyApp.xcodeproj/: project.pbxproj
Sources/CryptoTrackerCLI/: main.swift
Sources/CryptoTrackerCore/Exchange/: ExchangeAPI.swift  KrakenAPI.swift
Sources/CryptoTrackerCore/Metrics/: MetricsService.swift  PortfolioMetrics.swift
Sources/CryptoTrackerCore/Models/: AppData.swift  Settings.swift
Sources/FuckYouMoneyCLI/: main.swift
Sources/FuckYouMoneyCore/Exchange/: BitstampAPI.swift
Sources/FuckYouMoneyCore/Models/: Account.swift  Trade.swift
docs/: API.md  ROADMAP.md
src/crypto_tracker/: __init__.py  __main__.py  app.py  legacy_crypto_tracker.py
tests/: conftest.py  test_app_api.py  test_metrics.py  test_ui_utils.py
tests/CryptoTrackerCoreTests/: AssetMarketDataTests.swift  MetricsTests.swift  PolymarketTests.swift  PriceHistoryStorageTests.swift
tests/FuckYouMoneyCoreTests/: AssetMarketDataTests.swift  MetricsTests.swift  PolymarketTests.swift  PriceHistoryStorageTests.swift
(+20 files in other folders)
